--- a/app/src/main/res/layout/activity_store_info.xml
+++ b/app/src/main/res/layout/activity_store_info.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".member.RegisterShopActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".member.StoreInfoActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="@string/regis_nailshop"
+            android:text="@string/storeInfo"
             android:textSize="25dp"
             android:textColor="@color/black"
             android:textStyle="bold"/>
@@ -60,7 +60,7 @@
                         android:layout_height="wrap_content"
                         android:text=""
                         android:textSize="20sp"
-                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginLeft="15dp"
                         android:textColor="@color/maincolor"/>
 
                     <EditText
@@ -69,6 +69,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/shopname"
                         android:textSize="18dp"
+                        android:layout_marginLeft="16dp"
                         android:inputType="textPersonName"
                         android:background="@android:color/transparent">
 
@@ -89,108 +90,19 @@
                     <com.example.nailzip.FontAwesomeTextLight
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text=""
+                        android:text=""
                         android:textSize="20sp"
-                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginLeft="20dp"
                         android:textColor="@color/maincolor"/>
 
                     <EditText
-                        android:id="@+id/edt_ceoname"
+                        android:id="@+id/edt_opentime"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/ceoname"
+                        android:hint="@string/opentime"
+                        android:layout_marginLeft="16dp"
                         android:textSize="18dp"
-                        android:inputType="textPersonName"
-                        android:background="@android:color/transparent">
-
-                    </EditText>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="44dp"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical"
-                    android:layout_marginHorizontal="30dp"
-                    android:layout_marginVertical="10dp"
-                    android:background="@drawable/edge_txtbox">
-
-                    <com.example.nailzip.FontAwesomeTextLight
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text=""
-                        android:textSize="20sp"
-                        android:layout_marginHorizontal="20dp"
-                        android:textColor="@color/maincolor"/>
-
-                    <EditText
-                        android:id="@+id/edt_email"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/useremail"
-                        android:textSize="18dp"
-                        android:inputType="textEmailAddress"
-                        android:background="@android:color/transparent">
-
-                    </EditText>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="44dp"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical"
-                    android:layout_marginHorizontal="30dp"
-                    android:layout_marginVertical="10dp"
-                    android:background="@drawable/edge_txtbox">
-
-                    <com.example.nailzip.FontAwesomeTextLight
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text=""
-                        android:textSize="20sp"
-                        android:layout_marginHorizontal="20dp"
-                        android:textColor="@color/maincolor"/>
-
-                    <EditText
-                        android:id="@+id/edt_pw"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/password"
-                        android:textSize="18dp"
-                        android:inputType="textPassword"
-                        android:background="@android:color/transparent">
-
-                    </EditText>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="44dp"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical"
-                    android:layout_marginHorizontal="30dp"
-                    android:layout_marginVertical="10dp"
-                    android:background="@drawable/edge_txtbox">
-
-                    <com.example.nailzip.FontAwesomeTextLight
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text=""
-                        android:textSize="20sp"
-                        android:layout_marginHorizontal="20dp"
-                        android:textColor="@color/maincolor"/>
-
-                    <EditText
-                        android:id="@+id/edt_pw_check"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/check_pw"
-                        android:textSize="18dp"
-                        android:inputType="textPassword"
+                        android:inputType="text"
                         android:background="@android:color/transparent">
 
                     </EditText>
@@ -211,13 +123,14 @@
                         android:layout_height="wrap_content"
                         android:text=""
                         android:textSize="20sp"
-                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginLeft="17dp"
                         android:textColor="@color/maincolor"/>
 
                     <EditText
                         android:id="@+id/edt_shopphonenum"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
                         android:hint="@string/shopphonenum"
                         android:textSize="18dp"
                         android:inputType="phone"
@@ -240,39 +153,7 @@
                     <com.example.nailzip.FontAwesomeTextLight
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text=""
-                        android:textSize="20sp"
-                        android:layout_marginHorizontal="20dp"
-                        android:textColor="@color/maincolor"/>
-
-                    <EditText
-                        android:id="@+id/edt_phonenum"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/phonenum"
-                        android:textSize="18dp"
-                        android:inputType="phone"
-                        android:maxLength="13"
-                        android:background="@android:color/transparent">
-
-                    </EditText>
-
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="44dp"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical"
-                    android:layout_marginHorizontal="30dp"
-                    android:layout_marginVertical="10dp"
-                    android:background="@drawable/edge_txtbox">
-
-                    <com.example.nailzip.FontAwesomeTextLight
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginLeft="20dp"
                         android:text=""
                         android:textColor="@color/maincolor"
                         android:textSize="20sp" />
@@ -281,6 +162,7 @@
                         android:id="@+id/edt_address"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
                         android:hint="@string/address"
                         android:textSize="18dp"
                         android:inputType="textPostalAddress"
@@ -290,7 +172,67 @@
 
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:orientation="vertical"
+                    android:layout_marginHorizontal="30dp"
+                    android:layout_marginVertical="10dp"
+                    android:background="@drawable/edge_txtbox">
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical"
+                        android:layout_marginVertical="10dp"
+                        android:background="#00000000">
+
+                        <com.example.nailzip.FontAwesomeTextLight
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=""
+                            android:textSize="20sp"
+                            android:layout_marginLeft="17dp"
+                            android:textColor="@color/maincolor"/>
+
+                        <TextView
+                            android:id="@+id/edt_memo"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="15dp"
+                            android:textColor="#727272"
+                            android:text="@string/memo"
+                            android:enabled="false"
+                            android:textSize="18dp"
+                            android:inputType="text"
+                            android:background="@android:color/transparent">
+                        </TextView>
+                    </LinearLayout>
+
+                    <View
+                        android:id="@+id/view_line"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        app:layout_constraintTop_toTopOf="@+id/guideline2"
+                        android:background="#C4C4C4"/>
+
+                    <EditText
+                        android:id="@+id/edt_memocontent"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginVertical="10dp"
+                        android:layout_marginHorizontal="25dp"
+                        android:gravity="top|start"
+                        android:hint="@string/memo"
+                        android:textSize="18dp"
+                        android:scrollHorizontally="false"
+                        android:singleLine="false"
+                        android:inputType="textMultiLine"
+                        android:background="@android:color/transparent">
+                    </EditText>
+
+                </LinearLayout>
             </LinearLayout>
 
 
@@ -305,8 +247,8 @@
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/btn_complete"
-                android:text="@string/complete"
+                android:id="@+id/btn_next"
+                android:text="@string/next"
                 android:textStyle="bold"
                 android:textSize="23dp"
                 android:layout_marginHorizontal="30dp"
