--- a/app/src/main/res/layout/activity_shop_info.xml
+++ b/app/src/main/res/layout/activity_shop_info.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    tools:context=".InformationFragment"
-    android:id="@+id/fragment_information">
+    tools:context=".ShopInfoActivity"
+    android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -66,6 +65,7 @@
                 app:tabIndicatorColor="@color/maincolor"
                 app:tabIndicatorHeight="3dp"
                 app:tabRippleColor="#00000000">
+
 
             </com.google.android.material.tabs.TabLayout>
         </LinearLayout>
