--- a/app/src/main/res/layout/fragment_home_besttab.xml
+++ b/app/src/main/res/layout/fragment_home_besttab.xml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeBesttabFragment"
-    android:background="@color/txtbox">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".HomeBesttabFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:scrollbarFadeDuration="0"-->
+<!--        android:scrollbarSize="5dp"-->
+<!--        android:scrollbars="vertical"-->
+<!--        android:id="@+id/post_recyclerview"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"/>-->
+
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:scrollbarFadeDuration="0"
+        android:scrollbarSize="5dp"
+        android:scrollbars="vertical"
+        android:id="@+id/post_recyclerview"/>
 
-</FrameLayout>
+
+</RelativeLayout>
